# LibCMaker_Allegro

./: CMakeLists.txt  README.md  lib_cmaker_allegro.cmake
cmake/: FindAllegro.cmake
cmake/modules/: cmr_allegro_cmaker.cmake  cmr_allegro_get_download_params.cmake  empty_CMakeLists.txt
example/TestCompileWithAllegro/: CMakeLists.txt  README.md
